# idea-network

./: .gitignore  HANDOFF-P1.md  HANDOFF-P2.md  HANDOFF-P4.md  HANDOFF-P5.md  PLAN-v0.6.md  PLAN-v0.7.md  README.md  TAURI-README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
public/demo-samples/: inbox.csv  sent.csv
scripts/: generate-release-notes.mjs  pre-release-check.mjs  smoke-test.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: AskPanel.tsx  Charts.tsx  CommandPalette.tsx  DetailPanel.tsx  FilePicker.tsx  GraphControls.tsx  GraphDensityControls.tsx  GraphFilters.tsx  GraphLayoutControls.tsx  GraphModeBar.tsx  GraphSearch.tsx  GraphView.tsx  ImportReviewPanel.tsx  PerfPanel.tsx  ProviderSetup.tsx  Sidebar.tsx  StatsBar.tsx  UploadZone.tsx
src/lib/: analyze.ts  charts.ts  communities.ts  dataset.ts  graphForces.ts  graphModes.ts  headers.ts  importSummary.ts  ingest.ts  llm.ts  parseEml.ts  parseMsg.ts  parseOutlookCsv.ts  parsePst.ts  perf.ts  query.ts  report.ts  retrieval.ts  savedQueries.ts  savedViews.ts  storage.ts  tauriFs.ts  theme.ts  threading.ts  types.ts
src/workers/: analyzeWorker.ts  parseWorker.ts
tests/: charts-new.test.ts  communities.test.ts  graphFilters.test.ts  graphForces.test.ts  graphModes.test.ts  importSummary-demo.test.ts  importSummary.test.ts  ingest.test.ts  llm.test.ts  perf.test.ts  pipeline.test.ts  query.test.ts  retrieval.test.ts  savedQueries.test.ts  savedViews.test.ts  storage.test.ts  threading.test.ts
(+4 files in other folders)
